@@ -1,0 +1,2 @@
+file-without-copyright-information
+binary-without-manpage
